--- a/.github/workflows/deploy-front.yml
+++ b/.github/workflows/deploy-front.yml
@@ -17,14 +17,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install AWS CLI
-        run: sudo apt-get update && sudo apt-get install -y awscli
+      # ставим AWS CLI v2 (без apt)
+      - name: Setup AWS CLI
+        uses: aws-actions/setup-aws-cli@v3
+
+      - name: Check AWS CLI
+        run: aws --version
 
       - name: Sync to Object Storage (S3 compatible)
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ vars.AWS_REGION }}
+          AWS_REGION: ${{ vars.AWS_REGION }}          # ru-central1
+          AWS_DEFAULT_REGION: ${{ vars.AWS_REGION }}  # на всякий случай
         run: |
           aws s3 sync . s3://${{ vars.S3_BUCKET }} \
             --endpoint-url ${{ vars.S3_ENDPOINT }} \
